<resources>
    <string name="app_name">Registro de Comidas</string>
    <string name="title_estadisticas">Estadisticas</string>
    <string name="title_alertas">Alertas</string>
    <string name="title_qr">QR</string>
    <string name="title_registro">Registro</string>
    <string name="title_perfil">Perfil</string>


    <string name="estadisticas">Estadisticas</string>
    <string name="alertas">Alertas</string>
    <string name="qr">QR</string>
    <string name="registro">Registro</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_login">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="logo_desc">Logo de la aplicación</string>
</resources>