<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_qr">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.esperanzaapk.ui.dashboard.DashboardFragment"
        android:label="@string/title_estadisticas"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.esperanzaapk.ui.notifications.NotificationsFragment"
        android:label="@string/title_alertas"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_qr"
        android:name="com.example.esperanzaapk.ui.qr.QrFragment"
        android:label="@string/title_qr"
        tools:layout="@layout/fragment_qr" />

    <fragment
        android:id="@+id/navigation_registry"
        android:name="com.example.esperanzaapk.ui.registry.RegistryFragment"
        android:label="@string/title_registro"
        tools:layout="@layout/fragment_registry" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.esperanzaapk.ui.profile.ProfileFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_profile" />
</navigation>